--- a/404/index.html
+++ b/404/index.html
@@ -4,7 +4,7 @@
 			<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta name="format-detection" content="telephone=no">
-		<link rel="profile" href="http://gmpg.org/xfn/11">
+		<link rel="profile" href="https://gmpg.org/xfn/11">
 		<link rel="pingback" href="https://the3bemporium.com/xmlrpc.php">
 		
 <!-- Search Engine Optimization by Rank Math - https://rankmath.com/ -->
